Fixed project image title overflow hidden

--- a/src/components/styles/theme/05.components/atoms/_images.scss
+++ b/src/components/styles/theme/05.components/atoms/_images.scss
@@ -28,9 +28,10 @@
     @extend %position-t-0;
     
     width: $full;
-    height: 7rem;
+    height: fit-content;
     
     padding: $space-sm;
+    padding-bottom: $space-md;
 
     background: linear-gradient(0deg, transparent, #0000009a);
 
