--- a/src/components/styles/theme/05.components/molecules/_project-card.scss
+++ b/src/components/styles/theme/05.components/molecules/_project-card.scss
@@ -26,12 +26,20 @@ $_project-card-height: 17rem;
   @include shadow-base(rgba(0, 0, 0, 0.622));
 
   &--vertical-layout {
+    position: relative;
     width: 100%;
     max-width: 25rem;
     min-width: 18rem;
-    aspect-ratio: .7;
+    aspect-ratio: 0.7;
     display: flex;
     flex-direction: column-reverse;
+  }
+
+  &__top-image-wrapper {
+    @extend %position-t-0;
+    background-color: red;
+    width: 100%;
+    padding: $space-sm;
   }
 
   &__content {
@@ -68,7 +76,7 @@ $_project-card-height: 17rem;
   &__header {
     @extend %flex-col-xs;
 
-    &--horizontal{
+    &--horizontal {
       @extend %flex-space-between;
     }
   }
